# PolyMarketPredictionBot

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
dashboard/: package-lock.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: BotCards.tsx  HealthStatus.tsx  PnlChart.tsx  SignalTable.tsx  TopBar.tsx  TradesTable.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/types/: api.ts
docker/: bot.Dockerfile  dashboard-nginx.conf  dashboard.Dockerfile  nginx.conf
docker/postgres/: init.sql  seed.sql
docker/prometheus/: alerts.yml  prometheus.yml
scripts/: backup.sh  healthcheck.sh
src/bot/: __main__.py  config.py  main.py
src/bot/backtest/: __init__.py  comparison.py  comparison_report.py  data_provider.py  engine.py  evaluator.py  metrics.py  models.py  monte_carlo.py  report.py  walk_forward.py
src/bot/core/: events.py  retry.py  (+1 more)
tests/: conftest.py  test_integration.py  test_load_dashboard.py  test_stress.py
tests/test_backtest/: test_backtest_suite.py  test_evaluation.py
tests/test_dashboard/: test_api.py  test_ws_bridge.py  test_ws_broker.py
tests/test_execution/: test_executor.py  test_resolver.py  test_risk.py  test_sizer.py
tests/test_feeds/: test_binance_ws.py  test_exchange_adapter.py  test_exchange_manager.py  test_rsi_feed.py
tests/test_notifications/: test_telegram.py
tests/test_storage/: test_database.py
tests/test_strategies/: test_bollinger.py  test_momentum.py  test_phase12.py  test_regime.py  test_turbo_cvd.py  test_turbo_vwap.py
(+50 files in other folders)
